Add record style accessors to Device
Bug: Not applicable
Test: Existing tests
Change-Id: I0ab7629ccf1d83823ceb5ab8af0c1cd766cbd3d1

GitOrigin-RevId: b1c791f58b3e576c5d539f9722ca3a01e2a5fc9a